--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const metaKeywords = 'extension, startpage, homepage, browser startpage, minimal
 		<meta name="description" content={desc} />
 		<meta property="og:title" content={ogtitle} />
 		<meta property="og:description" content={desc} />
-		<meta property="og:type" content="website" />
+		<!-- <meta property="og:type" content="website" />
 		<meta property="og:url" content="https://bonjourr.fr/" />
 		<meta property="og:image" content="https://bonjourr.fr/twitter.jpg" />
 		<meta name="keywords" content={metaKeywords} />
@@ -24,7 +24,7 @@ const metaKeywords = 'extension, startpage, homepage, browser startpage, minimal
 		<meta name="twitter:image" content="https://bonjourr.fr/twitter.jpg" />
 		<meta name="twitter:creator" content="BonjourrTeam" />
 		<meta name="twitter:title" content={ogtitle} />
-		<meta name="twitter:description" content={desc} />
+		<meta name="twitter:description" content={desc} /> -->
 
 		<link rel="sitemap" href="/sitemap-index.xml" />
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
