--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -10,9 +10,9 @@ import Showcase from '../../components/Frontpage/Showcase.astro'
 <Layout
 	lang="zh"
 	id="frontpage"
-	title="DA CHUAN · AUTO INTERIOR"
-	ogtitle="DA CHUAN · CAR AUTO PARTS"
-	desc="Focus On car interior upgrade."
+	title="大川汽配"
+	ogtitle="222 和 223 内饰改装"
+	desc="专注服务汽车配件内饰产品升级"
 >
 	<Frontpage>
 		<Landing slot="landing">
@@ -50,14 +50,14 @@ import Showcase from '../../components/Frontpage/Showcase.astro'
 			</p>
 
 			<span slot="more-title">更多高端车型老改新</span>
-			<li slot="more-links">09-15 年宝马 F02 改 →</li>
+			<li slot="more-links">09-15 宝马 F02 改 →</li>
 			<!-- <li slot="more-searchbar">09-15 年宝马 F02 改 → </li> -->
 			<li slot="more-fonts">路虎老款 改 →</li>
-			<li slot="more-langs">奇瑞 QQ 改 →</li>
-			<li slot="more-darkmode">2024 年 G70 宝马 7 系</li>
+			<!-- <li slot="more-langs">奇瑞 QQ 改 →</li> -->
+			<li slot="more-darkmode">2024 G70 宝马 7 系</li>
 			<!-- <li slot="more-notes">2024 年 G70 宝马 7 系</li> -->
 			<li slot="more-quotes">2024 路虎</li>
-			<li slot="more-css">法拉利</li>
+			<!-- <li slot="more-css">法拉利</li> -->
 		</Showcase>
 
 		<Further slot="further">
