--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ import Showcase from '../components/Frontpage/Showcase.astro'
 				>
 			</p>
 
-			<span slot="dynamic-title">W221 Upgrade W222 Appreciate</span>
+			<span slot="dynamic-title">W221 Upgrade W223</span>
 			<p slot="dynamic-desc">
 				Some english introduction Some english introduction Some english introduction Some
 				english introduction Some english introduction Some english introduction Some
@@ -42,7 +42,7 @@ import Showcase from '../components/Frontpage/Showcase.astro'
 				english introduction Some english introduction Some english introduction
 			</p>
 
-			<span slot="custom-title">W221 Upgrade W223 Appreciate</span>
+			<span slot="custom-title">W221 Upgrade W222</span>
 			<p slot="custom-desc">
 				Some english introduction Some english introduction Some english introduction Some
 				english introduction Some english introduction Some english introduction Some
