--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -33,7 +33,7 @@ import Showcase from '../../components/Frontpage/Showcase.astro'
 				>
 			</p>
 
-			<span slot="dynamic-title">W221 升级 W222 对比</span>
+			<span slot="dynamic-title">W221 升级 W223</span>
 			<p slot="dynamic-desc">
 				写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字
 				写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字
@@ -41,7 +41,7 @@ import Showcase from '../../components/Frontpage/Showcase.astro'
 				写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字
 			</p>
 
-			<span slot="custom-title">W221 升级 W223 对比</span>
+			<span slot="custom-title">W221 升级 W222</span>
 			<p slot="custom-desc">
 				写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字
 				写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字
