禁止测试外链

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -43,9 +43,9 @@ const trans = isFrench ? zh : en
 				<Link href="/privacy">{trans['Privacy policy']}</Link>
 			</p>
 
-			<p>
-				<a href="https://www.baidu.com">{trans['Source code']}</a>
-			</p>
+			<!-- <p>
+				<a href="/">{trans['Source code']}</a>
+			</p> -->
 		</div>
 
 		<div id="signature">
@@ -60,7 +60,7 @@ const trans = isFrench ? zh : en
 
 		<div id="contact">
 			<p>
-				<a href="https://www.baidu.com">{trans['WeChat']}</a> ·
+				<a href="/">{trans['WeChat']}</a> ·
 				<a href="hufei.dev@aliyun.com">{trans['email']}</a>
 			</p>
 
