--- a/src/components/Frontpage/Frontpage.astro
+++ b/src/components/Frontpage/Frontpage.astro
@@ -42,13 +42,13 @@ import { btc, kofi } from '../../assets/icons/donate'
 		<slot name="donate-text" />
 
 		<div class="buttons">
-			<a href="https://www.baidu.com" class="button">
+			<a href="/" class="button">
 				<img width="64" src={kofi} class="icon" alt="" />
 				<slot name="donate-fiat" />
 			</a>
 
 			<a
-				href="https://www.baidu.com"
+				href="/"
 				class="button"
 			>
 				<img width="64" src={btc} class="icon" alt="" />
