--- a/src/components/Frontpage/Landing.astro
+++ b/src/components/Frontpage/Landing.astro
@@ -33,11 +33,11 @@ const trans = isChinese ? zh : en
 	}[name ?? '']
 
 	const link = {
-		firefox: 'https://www.baidu.com',
-		chrome: 'https://www.baidu.com',
-		edge: 'https://www.baidu.com',
-		safari: 'https://www.baidu.com',
-		ios: 'https://www.baidu.com',
+		firefox: '/',
+		chrome: '/',
+		edge: '/',
+		safari: '/',
+		ios: '/',
 	}[name ?? '']
 
 	if (icon && link) {
