--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -56,8 +56,8 @@ const trans = isChinese ? zh : en
 
 			<div class="links">
 				<Link href="/" id="homeLink">🏠 {trans.Home}</Link>
-				<a href="www.baidu.com">🌏 {trans.Online}</a>
-				<Link href="/docs">📰 {trans.Docs}</Link>
+				<a href="/#open">🌏 {trans.Online}</a>
+				<!-- <Link href="/docs">📰 {trans.Docs}</Link> -->
 				<Link href="/#further">☎️ {trans.Contact}</Link>
 			</div>
 
@@ -72,19 +72,19 @@ const trans = isChinese ? zh : en
 			<!-- <h2>Download for</h2>
 
 			<div class="downloadLink">
-				<a href="https://www.baidu.com" title="备用菜单">备用菜单 1</a>
+				<a href="/" title="备用菜单">备用菜单 1</a>
 			</div>
 
 			<div class="downloadLink">
-				<a href="https://www.baidu.com" title="备用菜单">备用菜单 2</a>
+				<a href="/" title="备用菜单">备用菜单 2</a>
 			</div>
 
 			<div class="downloadLink">
-				<a href="https://www.baidu.com" title="备用菜单">备用菜单 3</a>
+				<a href="/" title="备用菜单">备用菜单 3</a>
 			</div>
 
 			<div class="downloadLink">
-				<a href="https://www.baidu.com" title="备用菜单">备用菜单 4</a>
+				<a href="/" title="备用菜单">备用菜单 4</a>
 			</div> -->
 		</aside>
 	</div>
