--- a/src/pages/docs/contribute.astro
+++ b/src/pages/docs/contribute.astro
@@ -2,10 +2,10 @@
 import Docs from '../../layouts/Docs.astro'
 import Link from '../../components/Link.astro'
 
-const webstore = 'https://www.baidu.com'
-const edgeAddons = 'https://www.baidu.com'
-const firefoxAddons = 'https://www.baidu.com'
-const appleAppStore = 'https://www.baidu.com'
+const webstore = '/'
+const edgeAddons = '/'
+const firefoxAddons = '/'
+const appleAppStore = '/'
 ---
 
 <Docs
