--- a/src/pages/zh/docs/index.astro
+++ b/src/pages/zh/docs/index.astro
@@ -1,9 +1,9 @@
 ---
 import DocsLanding from '../../../components/Docs/DocsLanding.astro'
-const webstore = 'https://www.baidu.com'
-const edgeAddons = 'https://www.baidu.com'
-const firefoxAddons = 'https://www.baidu.com'
-const appleAppStore = 'https://www.baidu.com'
+const webstore = '/'
+const edgeAddons = '/'
+const firefoxAddons = '/'
+const appleAppStore = '/'
 ---
 
 <DocsLanding lang="zh">
