--- a/src/components/Docs/DocsLanding.astro
+++ b/src/components/Docs/DocsLanding.astro
@@ -5,10 +5,7 @@ const locale = props.lang === 'zh' ? '/zh' : ''
 const title = props.lang === 'zh' ? '售后文档' : 'After Sales Docs'
 ---
 
-<Docs
-	title={title}
-	thumbnail="/documentation/backgrounds/martin-marek-1hRH-z4nvxE-unsplash.jpg"
->
+<Docs title={title} thumbnail="/documentation/backgrounds/martin-marek-1hRH-z4nvxE-unsplash.jpg">
 	<section id="summary">
 		<a href={locale + '/docs/contribute'}>
 			<span>📰</span>
