--- a/src/layouts/Docs.astro
+++ b/src/layouts/Docs.astro
@@ -19,7 +19,7 @@ if (!title && frontmatter) {
 	})
 </script>
 
-<Layout title={`${title} · 大川文档`} lang={lang} id='docs'>
+<Layout title={`${title} · doc`} lang={lang} id='docs'>
 
 	<main>
 		<DocsTitle title={title} thumbnail={thumbnail}>
