--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,10 +15,10 @@ import Showcase from '../components/Frontpage/Showcase.astro'
 >
 	<Frontpage>
 		<Landing slot="landing">
-			<span slot="subtitle">Focus on Car Interior Upgrade</span>
+			<span slot="subtitle">The first and only company in China<br />that simultaneously possesses the<br />interior modification of<br />222 and 223</span>
 			<span slot="download">SEE MORE</span>
-			<span slot="other_1"> One-stop Innovation International</span>
-			<span slot="other">Focus On Car Interior Upgrade Service</span>
+			<span slot="other_1"> One-stop · Innovation · International</span>
+			<span slot="other">Focus On Car Interior Upgrade</span>
 		</Landing>
 
 		<Showcase slot="showcase">
