--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -27,26 +27,22 @@ import Showcase from '../../components/Frontpage/Showcase.astro'
 		<Showcase slot="showcase">
 			<span slot="title">W221 升级 W222 / W223</span>
 			<p slot="desc">
-				源头厂家无损改装 W221 升级 W222 或 W223 内饰 1:1 套装 原车座椅复刻<br />Linux
-				系统仪表 娱乐屏双系统 大川出品，价格优，品质好，性价比高<br />欢迎 <a
-					href="/#further">联系我们订制</a
-				>
+				大川出品，价格优，品质好，性价比高
+				欢迎 <a href="/#further">联系我们订制</a>
 			</p>
 
 			<span slot="dynamic-title">W221 升级 W223</span>
 			<p slot="dynamic-desc">
-				写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字
-				写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字
-				写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字
-				写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字
+				奔驰 W221 系列作为经典车型，其升级改装成 W223 系列可以带来全新的驾驶体验和豪华感。
+				源头厂家无损改装 W221 升级 W223 内饰，1:1 套装，原车座椅复刻，Linux
+				系统仪表，娱乐屏双系统。
 			</p>
 
 			<span slot="custom-title">W221 升级 W222</span>
 			<p slot="custom-desc">
-				写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字
-				写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字
-				写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字
-				写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字写一些产品介绍的文字
+				奔驰 W221 系列作为经典车型，其升级改装成 W222 系列可以带来全新的驾驶体验和豪华感。
+				源头厂家无损改装 W221 升级 W222 内饰，1:1 套装，原车座椅复刻，Linux
+				系统仪表，娱乐屏双系统。
 			</p>
 
 			<span slot="more-title">更多高端车型老改新</span>
