--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -27,7 +27,7 @@ import Showcase from '../../components/Frontpage/Showcase.astro'
 		<Showcase slot="showcase">
 			<span slot="title">W221 升级 W222 / W223</span>
 			<p slot="desc">
-				大川出品，价格优，品质好，性价比高
+				大川出品，价格优，品质好，性价比高<br />
 				欢迎 <a href="/#further">联系我们订制</a>
 			</p>
 
@@ -40,19 +40,18 @@ import Showcase from '../../components/Frontpage/Showcase.astro'
 
 			<span slot="custom-title">W221 升级 W222</span>
 			<p slot="custom-desc">
-				奔驰 W221 系列作为经典车型，其升级改装成 W222 系列可以带来全新的驾驶体验和豪华感。
 				源头厂家无损改装 W221 升级 W222 内饰，1:1 套装，原车座椅复刻，Linux
 				系统仪表，娱乐屏双系统。
 			</p>
 
 			<span slot="more-title">更多高端车型老改新</span>
-			<li slot="more-links">09-15 宝马 F02 改 →</li>
+			<!-- <li slot="more-links">09-15 宝马 F02 改 →</li> -->
 			<!-- <li slot="more-searchbar">09-15 年宝马 F02 改 → </li> -->
-			<li slot="more-fonts">路虎老款 改 →</li>
+			<!-- <li slot="more-fonts">路虎老款 改 →</li> -->
 			<!-- <li slot="more-langs">奇瑞 QQ 改 →</li> -->
-			<li slot="more-darkmode">2024 G70 宝马 7 系</li>
+			<!-- <li slot="more-darkmode">2024 G70 宝马 7 系</li> -->
 			<!-- <li slot="more-notes">2024 年 G70 宝马 7 系</li> -->
-			<li slot="more-quotes">2024 路虎</li>
+			<!-- <li slot="more-quotes">2024 路虎</li> -->
 			<!-- <li slot="more-css">法拉利</li> -->
 		</Showcase>
 
