--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import Showcase from '../components/Frontpage/Showcase.astro'
 	<Frontpage>
 		<Landing slot="landing">
 			<span slot="subtitle">The first and only company in China<br />that simultaneously possesses the<br />interior modification of<br />222 and 223</span>
-			<span slot="download">SEE MORE</span>
+			<span slot="button_more">SEE MORE</span>
 			<span slot="other_1"> One-stop · Innovation · International</span>
 			<span slot="other">Focus On Car Interior Upgrade</span>
 		</Landing>
@@ -81,9 +81,8 @@ import Showcase from '../components/Frontpage/Showcase.astro'
 			<span slot="docs-desc"> 商务联系方式 </span>
 			<span slot="docs-button">Contact Sales Team</span>
 
-			<span slot="repo-title">After Sales Service</span>
+			<span slot="repo-title">After Sales Service System：</span>
 			<span slot="repo-desc">
-				DACHUAN ASS System：<br />
 				1、Search the Solutions<br />
 				2、Submit Post-Sale Issues<br />
 				3、Customer Service
