--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -19,7 +19,7 @@ import Showcase from '../../components/Frontpage/Showcase.astro'
 			<span slot="subtitle">
 				<br />国内首家和唯一同时拥有<br /> 222 和 223 两款内饰改装的企业</span
 			>
-			<span slot="download">了解更多</span>
+			<span slot="button_more">了解更多</span>
 			<span slot="other_1"> 一体化 · 国际化 · 自主创新</span>
 			<span slot="other">专注服务汽车配件内饰产品升级</span>
 		</Landing>
@@ -66,9 +66,8 @@ import Showcase from '../../components/Frontpage/Showcase.astro'
 			<span slot="docs-desc"> 商务联系方式，联系我们订制 </span>
 			<span slot="docs-button">联系销售团队</span>
 
-			<span slot="repo-title">售后服务</span>
+			<span slot="repo-title">大川售后系统</span>
 			<span slot="repo-desc">
-				使用大川售后系统：<br />
 				1、查找解决方案<br />
 				2、提交售后问题<br />
 				3、人工服务
