--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -72,16 +72,15 @@ import Showcase from '../components/Frontpage/Showcase.astro'
 
 		<Further slot="further">
 			<span slot="title">Contact Us</span>
-
-			<span slot="contact-title">Product Experience Reservation</span>
-			<span slot="contact-desc"> 一些内容待补充 </span>
-			<span slot="contact-button">Reserve Now</span>
-
 			<span slot="docs-title">Business Cooperation</span>
-			<span slot="docs-desc"> 商务联系方式 </span>
-			<span slot="docs-button">Contact Sales Team</span>
+			<span slot="docs-desc"> 
+				联系我们订制<br />
+				电话：18563088888<br />
+				电话：18520921289
+			</span>
+			<span slot="docs-button">Enter E-commerce Web</span>
 
-			<span slot="repo-title">After Sales Service System：</span>
+			<span slot="repo-title">After Sales Service System</span>
 			<span slot="repo-desc">
 				1、Search the Solutions<br />
 				2、Submit Post-Sale Issues<br />
