--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -58,13 +58,13 @@ import Showcase from '../../components/Frontpage/Showcase.astro'
 		<Further slot="further">
 			<span slot="title">联系我们</span>
 
-			<span slot="contact-title">预约产品体验</span>
-			<span slot="contact-desc"> 一些可上门提供体验的展示 </span>
-			<span slot="contact-button">立即预约</span>
-
 			<span slot="docs-title">商务合作</span>
-			<span slot="docs-desc"> 商务联系方式，联系我们订制 </span>
-			<span slot="docs-button">联系销售团队</span>
+			<span slot="docs-desc"> 
+				联系我们订制<br />
+				电话：18563088888<br />
+				电话：18520921289
+			</span>
+			<span slot="docs-button">浏览电商网站</span>
 
 			<span slot="repo-title">大川售后系统</span>
 			<span slot="repo-desc">
