--- a/src/components/Frontpage/Further.astro
+++ b/src/components/Frontpage/Further.astro
@@ -9,9 +9,9 @@ const locale = isChinese ? '/zh' : ''
 	<div><h2><slot name="sub_title" /></h2></div>
 
 	<div>
-		<h3><slot name="docs-title" /></h3>
+		<h3><slot name="docs-title" /></h3>	
 		<p><slot name="docs-desc" /></p>
-		<Link href={locale + '/docs/1'} class="button"><slot name="docs-button" /></Link>
+		<Link href={locale + '/docs/1'} class="button"><slot name="contact_business" /></Link>
 	</div>
 
 	<div>
