--- a/src/components/Frontpage/Landing.astro
+++ b/src/components/Frontpage/Landing.astro
@@ -59,7 +59,7 @@ const trans = isChinese ? zh : en
 		</div>
 
 		<div class="container">
-			<Link id="download-link" href={trans.click_href} class="button">
+			<Link href="/#showcase" class="button">
 				<slot name="button_more" />
 			</Link>
 		</div>
