--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,10 @@ import Showcase from '../components/Frontpage/Showcase.astro'
 >
 	<Frontpage>
 		<Landing slot="landing">
-			<span slot="subtitle">The first and only company in China<br />that simultaneously possesses the<br />interior modification of<br />222 and 223</span>
+			<span slot="subtitle"
+				>The first and only company in China<br />that simultaneously possesses the<br
+				/>interior modification of 222 & 223</span
+			>
 			<span slot="button_more">SEE MORE</span>
 			<span slot="other_1"> One-stop · Innovation · International</span>
 			<span slot="other">Focus On Car Interior Upgrade</span>
@@ -24,61 +27,40 @@ import Showcase from '../components/Frontpage/Showcase.astro'
 		<Showcase slot="showcase">
 			<span slot="title">W221 Upgrade W222 / W223</span>
 			<p slot="desc">
-				Original Manufacturer with Non-Destructive Modification for " W221 Upgrade W222 OR
-				W223 " Interior 1:1 Set <br /> OEM Seat Replica， Linux Car Gauges <br />Double
-				System for Infotainment Display <br /> Made by Da-Chuan and offer Competitive prices,
-				good quality, high cost-performance ratio. <br /><a href="/#further"
-					>Please Contact us to Order Your Upgrade！</a
-				>
+				We offer competitive prices, good quality, high cost-performance ratio. <br /><br
+				/><a href="/#further">Please Contact us to Order Your Upgrade！</a>
 			</p>
 
 			<span slot="dynamic-title">W221 Upgrade W223</span>
 			<p slot="dynamic-desc">
-				Some english introduction Some english introduction Some english introduction Some
-				english introduction Some english introduction Some english introduction Some
-				english introduction Some english introduction Some english introduction Some
-				english introduction Some english introduction Some english introduction Some
-				english introduction Some english introduction Some english introduction Some
-				english introduction Some english introduction Some english introduction
+				The Mercedes-Benz W221 series, as a classic car model, can be upgraded to the W223
+				series to provide a brand new driving experience and a sense of luxury. The original
+				manufacturer offers non-destructive modification to upgrade the W221 to the W223
+				interior, with a 1:1 kit, replica original car seats, Linux system dashboard, and
+				dual entertainment screen systems.
 			</p>
 
 			<span slot="custom-title">W221 Upgrade W222</span>
 			<p slot="custom-desc">
-				Some english introduction Some english introduction Some english introduction Some
-				english introduction Some english introduction Some english introduction Some
-				english introduction Some english introduction Some english introduction Some
-				english introduction Some english introduction Some english introduction Some
-				english introduction Some english introduction Some english introduction Some
-				english introduction Some english introduction Some english introduction
+				The Mercedes-Benz W221 series, as a classic car model, can be upgraded to the W222
+				series to provide a brand new driving experience and a sense of luxury. The original
+				manufacturer offers non-destructive modification to upgrade the W221 to the W222
+				interior, with a 1:1 kit, replica original car seats, Linux system dashboard, and
+				dual entertainment screen systems.
 			</p>
 
-			<span slot="more-title">更多高端车型老改新</span>
-			<li slot="more-links">09-15 年宝马 F02 改 →</li>
-			<!-- <li slot="more-searchbar">09-15 年宝马 F02 改 → </li> -->
-			<li slot="more-fonts">路虎老款 改 →</li>
-			<li slot="more-langs">奇瑞 QQ 改 →</li>
-			<li slot="more-darkmode">2024 年 G70 宝马 7 系</li>
-			<!-- <li slot="more-notes">2024 年 G70 宝马 7 系</li> -->
-			<li slot="more-quotes">2024 路虎</li>
-			<li slot="more-css">法拉利</li>
+			<span slot="more-title">More high-end old car are being upgraded.</span>
 		</Showcase>
-
-		<!-- <h2 slot="open-title">Free, open source and privacy focused</h2>
-		<p slot="open-text">
-			Bonjourr is made by two independent developpers who love things well made and actually
-			think privacy is important. You can use Bonjourr straight away, without having to create
-			or log into any account because we do not collect any data.
-		</p> -->
 
 		<Further slot="further">
 			<span slot="title">Contact Us</span>
 			<span slot="docs-title">Business Cooperation</span>
-			<span slot="docs-desc"> 
-				联系我们订制<br />
-				电话：18563088888<br />
-				电话：18520921289
+			<span slot="docs-desc">
+				Call and Order<br />
+				Tel：18563088888<br />
+				Tel：18520921289
 			</span>
-			<span slot="docs-button">Enter E-commerce Web</span>
+			<span slot="contact_business">Enter E-commerce Web</span>
 
 			<span slot="repo-title">After Sales Service System</span>
 			<span slot="repo-desc">
