--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -1,6 +1,5 @@
 ---
 import Layout from '../../layouts/Layout.astro'
-
 import Frontpage from '../../components/Frontpage/Frontpage.astro'
 import Landing from '../../components/Frontpage/Landing.astro'
 import Further from '../../components/Frontpage/Further.astro'
@@ -17,8 +16,9 @@ import Showcase from '../../components/Frontpage/Showcase.astro'
 	<Frontpage>
 		<Landing slot="landing">
 			<span slot="subtitle">
-				<br />国内首家和唯一同时拥有<br /> 222 和 223 两款内饰改装的企业</span
-			>
+				<br />国内首家和唯一同时拥有
+				<br />222 和 223 两款内饰改装的企业
+			</span>
 			<span slot="button_more">了解更多</span>
 			<span slot="other_1"> 一体化 · 国际化 · 自主创新</span>
 			<span slot="other">专注服务汽车配件内饰产品升级</span>
@@ -59,12 +59,12 @@ import Showcase from '../../components/Frontpage/Showcase.astro'
 			<span slot="title">联系我们</span>
 
 			<span slot="docs-title">商务合作</span>
-			<span slot="docs-desc"> 
+			<span slot="docs-desc">
 				联系我们订制<br />
 				电话：18563088888<br />
 				电话：18520921289
 			</span>
-			<span slot="docs-button">浏览电商网站</span>
+			<span slot="contact_business">浏览电商网站</span>
 
 			<span slot="repo-title">大川售后系统</span>
 			<span slot="repo-desc">
