--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ const en = {
 	IT: 'DC IT Department',
 	Made: 'DA CHUAN ',
 	'Privacy policy': 'Privacy policy',
-	'Source code': 'A Link',
+	'Source code': 'Version 240713.1638',
 	'Contact us': 'Contact Our Sales Team',
 	by: 'AUTO INTERIOR SERVICE Co., Ltd.',
 }
@@ -19,7 +19,7 @@ const zh = {
 	IT: '大川 IT 部',
 	Made: '大川广州汽车服务有限公司',
 	'Privacy policy': '隐私条款',
-	'Source code': '备用链接',
+	'Source code': '部署版本 240713.1638',
 	'Contact us': '联系我们的销售团队',
 	by: '大川车业 | 大川汽配',
 }
@@ -40,12 +40,12 @@ const trans = isChinese ? zh : en
 			<p>© 2024 {trans['IT']}</p>
 
 			<p>
-				<Link href="/privacy">{trans['Privacy policy']}</Link>
+				{trans['Source code']}
 			</p>
 
-			<!-- <p>
-				<a href="/">{trans['Source code']}</a>
-			</p> -->
+			<p>
+				<Link href="/privacy">{trans['Privacy policy']}</Link>
+			</p>
 		</div>
 
 		<div id="signature">
@@ -59,11 +59,11 @@ const trans = isChinese ? zh : en
 
 		<div id="contact">
 			<p>
-				<a href="/">{trans['WeChat']}</a> ·
+				<a href="/wechat">{trans['WeChat']}</a> ·
 				<a href="hufei.dev@aliyun.com">{trans['email']}</a>
 			</p>
 
-			<p>{trans['Contact us']}</p>
+			<p><a href="/#further">{trans['Contact us']}</a></p>
 		</div>
 	</div>
 </footer>
