--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -71,8 +71,8 @@ import Showcase from '../components/Frontpage/Showcase.astro'
 			<span slot="repo-button">Enter System</span>
 		</Further>
 
-		<h2 slot="open-title">Be International，E-commerce</h2>
-		<p slot="open-text">
+		<h2 slot="global-title">Be International，E-commerce</h2>
+		<p slot="global-text">
 			Learn More Details，Go to website：<a href="https://www.dcautointerior.com"
 				>www.dcautointerior.com</a
 			>
