--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -75,8 +75,8 @@ import Showcase from '../../components/Frontpage/Showcase.astro'
 			<span slot="repo-button">进入售后系统</span>
 		</Further>
 
-		<h2 slot="open-title">走向国际化，大川跨境电商</h2>
-		<p slot="open-text">
+		<h2 slot="global-title">走向国际化，大川跨境电商</h2>
+		<p slot="global-text">
 			了解更多详细产品详情，请前往大川国际网站：<a href="https://www.dcautointerior.com"
 				>www.dcautointerior.com</a
 			>
