--- a/src/pages/docs/index.astro
+++ b/src/pages/docs/index.astro
@@ -8,6 +8,17 @@ import DocsLanding from '../../components/Docs/DocsLanding.astro'
 	<span slot="profiles-title">222 Doc Tutorial</span>
 	<span slot="styles-title">223 Video Tutorial</span>
 	<section slot="docs">
-		<h2 id="install-extension">Something writed here</h2>
+		<p>The Da Chuan after-sales web system is under development, please refer to the aforementioned document for guidance first.</p>
+		<br />
+		<p>The after-sales software system is designed to :</p>
+		<li>Assist in manual after-sales service</li>
+		<li>Enhance the enterprise's digital and professional high-efficiency management</li>
+		<li>Provide customers with the convenience of finding guidance solutions timely</li>
+		<br />
+		<p>The main features of the system are :</p>
+		<li>Global search to find guidance solutions for common keywords;</li>
+		<li>Categorized search: for dashboard and entertainment screen hardware and software, as well as all types of interior decorations;</li>
+		<li>Customers can submit new after-sales issues, and the system will feedback to Da Chuan staff;</li>
+		<li>Processed after-sales solutions are organized and saved in the after-sales system, where guidance documents can be added, modified, or deleted;</li>
 	</section>
 </DocsLanding>
