--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,23 +57,23 @@ import Showcase from '../components/Frontpage/Showcase.astro'
 			<span slot="docs-title">Business Cooperation</span>
 			<span slot="docs-desc">
 				Call and Order<br />
-				Tel：18563088888<br />
-				Tel：18520921289
+				Tel : 18563088888<br />
+				Tel : 18520921289
 			</span>
 			<span slot="contact_business">Enter E-commerce Web</span>
 
-			<span slot="repo-title">After Sales Service System</span>
+			<span slot="repo-title">After Sales System</span>
 			<span slot="repo-desc">
-				1、Search the Solutions<br />
-				2、Submit Post-Sale Issues<br />
-				3、Customer Service
+				1 . Search the Solutions<br />
+				2 . Submit Post-Sale Issues<br />
+				3 . Customer Service
 			</span>
 			<span slot="repo-button">Enter System</span>
 		</Further>
 
-		<h2 slot="global-title">Be International，E-commerce</h2>
+		<h2 slot="global-title">Be International, E-commerce</h2>
 		<p slot="global-text">
-			Learn More Details，Go to website：<a href="https://www.dcautointerior.com"
+			Learn More Details, Go to website : <a href="https://www.dcautointerior.com"
 				>www.dcautointerior.com</a
 			>
 		</p>
