up page privacy policy

--- a/src/pages/privacy.astro
+++ b/src/pages/privacy.astro
@@ -2,11 +2,14 @@
 import Docs from '../layouts/Docs.astro'
 ---
 
-<Docs>
+<Docs
+	title="DC AUTO INTERIOR"
+	thumbnail="/documentation/backgrounds/pascal-debrunner-LKOuYT5_dyw-unsplash.jpg"
+	lang="en"
+>
 	<h1>Privacy policy</h1>
 
-	<p>
-		We do not use collect, store, or
-		share any data the user generates on Web Pages. 
-	</p>
+	<p>We do not use collect, store, or share any data the user generates on Web Pages.</p>
+
+	<br /><br /><br /><br /><br /><br /><br /><br />
 </Docs>
