--- a/src/pages/zh/privacy.astro
+++ b/src/pages/zh/privacy.astro
@@ -2,10 +2,17 @@
 import Docs from '../../layouts/Docs.astro'
 ---
 
-<Docs>
+<Docs
+	title="大川汽配"
+	thumbnail="/documentation/backgrounds/pascal-debrunner-LKOuYT5_dyw-unsplash.jpg"
+	lang="en"
+>
 	<h1>隐私条款</h1>
 
 	<p>
 		我们不会收集、存储或分享用户在网站上产生的任何数据。
 	</p>
+
+	<br /><br /><br /><br /><br /><br /><br /><br />
+
 </Docs>
