--- a/src/pages/docs/contribute.astro
+++ b/src/pages/docs/contribute.astro
@@ -4,7 +4,7 @@ import Link from '../../components/Link.astro'
 ---
 
 <Docs
-	title="Doc Title"
+	title="222 售后指导目录"
 	thumbnail="/documentation/backgrounds/pascal-debrunner-LKOuYT5_dyw-unsplash.jpg"
 	lang="en"
 >
@@ -12,9 +12,5 @@ import Link from '../../components/Link.astro'
 
 	<p>
 		xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-		<!-- <a href="https://ko-fi.com/bonjourr">regular money</a> or
-		<a href="https://commerce.coinbase.com/checkout/095cc203-130d-4e56-9716-3aa10a202d9b"
-			>crypto money</a
-		>. -->
 	</p>
 </Docs>
