--- a/src/pages/goodbye.astro
+++ b/src/pages/goodbye.astro
@@ -3,11 +3,11 @@ import Layout from '../layouts/Layout.astro'
 import GoodbyeForm from '../components/Goodbye.astro'
 ---
 
-<Layout title={`Uninstalled Bonjourr · Startpage for your browser`} lang="en">
+<Layout title={`thanks`} lang="en">
 	<GoodbyeForm>
-		<span slot="title">Thank you for using Bonjourr.</span>
+		<span slot="title">Thank you for using.</span>
 		<span slot="desc">
-			We're sorry to see you go. If you have time, tell us what would make Bonjourr better,
+			We're sorry to see you go. If you have time, tell us what would make better,
 			thanks! 😊
 		</span>
 
