--- a/src/pages/zh/goodbye.astro
+++ b/src/pages/zh/goodbye.astro
@@ -3,18 +3,17 @@ import Layout from '../../layouts/Layout.astro'
 import GoodbyeForm from '../../components/Goodbye.astro'
 ---
 
-<Layout title={`Bonjourr désinstallé · Page d'accueil de navigateur`} lang="zh">
+<Layout title={`Bonjourr Page`} lang="zh">
 	<GoodbyeForm>
-		<span slot="title">Merci d'avoir utilisé Bonjourr.</span>
+		<span slot="title">Merci</span>
 		<span slot="desc">
-			On est désolé de vous voir partir. Si vous avez du temps, dites-nous comment on pourrait
-			améliorer Bonjourr, merci ! 😊
+			😊
 		</span>
 
-		<span slot="label-message">Votre message</span>
-		<span slot="submit">Envoyer</span>
+		<span slot="label-message">message</span>
+		<span slot="submit"> </span>
 
-		<span slot="sent">Votre message a été envoyé, merci !</span>
-		<span slot="back">Retour à l'accueil</span>
+		<span slot="sent"> 。。 </span>
+		<span slot="back"> .. </span>
 	</GoodbyeForm>
 </Layout>
