--- a/src/components/Frontpage/Further.astro
+++ b/src/components/Frontpage/Further.astro
@@ -89,13 +89,13 @@ const locale = isChinese ? '/zh' : ''
 	}
 
 	@media only screen and (max-width: 500px) {
-		.container > div:nth-child(1) {
+		/* .container > div:nth-child(1) {
 			padding: 0px;
 		}
 
 		.container > div:nth-child(2) {
 			padding: 0px;
-		}
+		} */
 
 		.container > div:nth-child(1) h2 {
 			margin-bottom: 0px !important;
