--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -28,7 +28,7 @@ import Showcase from '../../components/Frontpage/Showcase.astro'
 			<span slot="title">W221 升级 W222 / W223</span>
 			<p slot="desc">
 				大川出品，价格优，品质好，性价比高<br />
-				欢迎 <a href="/#further">联系我们订制</a>
+				欢迎 <a href="/zh/#further">联系我们订制</a>
 			</p>
 
 			<span slot="dynamic-title">W221 升级 W223</span>
