--- a/src/pages/zh/docs/contribute.astro
+++ b/src/pages/zh/docs/contribute.astro
@@ -1,6 +1,5 @@
 ---
 import Docs from '../../../layouts/Docs.astro'
-import Link from '../../../components/Link.astro'
 ---
 
 <Docs
@@ -8,13 +7,5 @@ import Link from '../../../components/Link.astro'
 	lang="en"
 	thumbnail="/documentation/backgrounds/pascal-debrunner-LKOuYT5_dyw-unsplash.jpg"
 >
-<h2 id="donate">测试写点什么</h2>
-
-<p>
-	写点东西写点东西写点东西写点东西写点东西写点东西写点东西写点东西写点东西写点东西写点东西写点东西
-	<!-- <a href="https://ko-fi.com/bonjourr">regular money</a> or
-	<a href="https://commerce.coinbase.com/checkout/095cc203-130d-4e56-9716-3aa10a202d9b"
-		>crypto money</a
-	>. -->
-</p>
+<slot/>
 </Docs>
