--- a/src/components/Docs/DocsLanding.astro
+++ b/src/components/Docs/DocsLanding.astro
@@ -15,11 +15,11 @@ const title = props.lang === 'zh' ? '售后文档' : 'After Sales Docs'
 			</div>
 		</a>
 
-		<a href={locale + '/docs/contribute'}>
+		<a href={locale + '/docs/catalog'}>
 			<span>▶️</span>
 
 			<div>
-				<h3><slot name="contribute-title" /></h3>
+				<h3><slot name="video-223" /></h3>
 			</div>
 		</a>
 
