--- a/src/pages/zh/docs/index.astro
+++ b/src/pages/zh/docs/index.astro
@@ -4,7 +4,7 @@ import DocsLanding from '../../../components/Docs/DocsLanding.astro'
 
 <DocsLanding lang="zh">
 	<span slot="overview-title">223 图文指导</span>
-	<span slot="contribute-title">223 视频指导</span>
+	<span slot="video-223">223 视频指导</span>
 	<span slot="profiles-title">222 图文指导</span>
 	<span slot="styles-title">222 视频指导</span>
 	<br />
