--- a/src/pages/docs/index.astro
+++ b/src/pages/docs/index.astro
@@ -4,7 +4,7 @@ import DocsLanding from '../../components/Docs/DocsLanding.astro'
 
 <DocsLanding lang="en">
 	<span slot="overview-title">223 Doc Tutorial</span>
-	<span slot="contribute-title">223 Video Tutorial</span>
+	<span slot="video-223">223 Video Tutorial</span>
 	<span slot="profiles-title">222 Doc Tutorial</span>
 	<span slot="styles-title">223 Video Tutorial</span>
 	<section slot="docs">
