--- a/src/components/Docs/DocsLanding.astro
+++ b/src/components/Docs/DocsLanding.astro
@@ -23,7 +23,7 @@ const title = props.lang === 'zh' ? '售后文档' : 'After Sales Docs'
 			</div>
 		</a>
 
-		<a href={locale + '/docs/contribute'}>
+		<!-- <a href={locale + '/docs/contribute'}>
 			<span>📰</span>
 
 			<div>
@@ -35,9 +35,9 @@ const title = props.lang === 'zh' ? '售后文档' : 'After Sales Docs'
 			<span>▶️</span>
 
 			<div>
-				<h3><slot name="styles-title" /></h3>
+				<h3><slot name="video-222" /></h3>
 			</div>
-		</a>
+		</a> -->
 	</section>
 
 	<slot name="docs" />
