--- a/src/pages/docs/index.astro
+++ b/src/pages/docs/index.astro
@@ -6,7 +6,7 @@ import DocsLanding from '../../components/Docs/DocsLanding.astro'
 	<span slot="overview-title">223 Doc Tutorial</span>
 	<span slot="video-223">223 Video Tutorial</span>
 	<span slot="profiles-title">222 Doc Tutorial</span>
-	<span slot="styles-title">223 Video Tutorial</span>
+	<span slot="video-222">223 Video Tutorial</span>
 	<section slot="docs">
 		<p>The Da Chuan after-sales web system is under development, please refer to the aforementioned document for guidance first.</p>
 		<br />
