--- a/src/pages/zh/docs/index.astro
+++ b/src/pages/zh/docs/index.astro
@@ -3,19 +3,15 @@ import DocsLanding from '../../../components/Docs/DocsLanding.astro'
 ---
 
 <DocsLanding lang="zh">
-	<span slot="overview-title">223 图文指导</span>
-	<span slot="video-223">223 视频指导</span>
-	<span slot="profiles-title">222 图文指导</span>
-	<span slot="styles-title">222 视频指导</span>
+	<span slot="overview-title">图文指导</span>
+	<span slot="video-223">视频指导</span>
 	<br />
 	<section slot="docs">
 		<p>大川售后 Web 系统正在开发中，请先查阅上述文档指导</p>
-		<br />
 		<p>售后软件系统旨在：</p>
 		<li>辅助人工售后服务</li>
-		<li>提高企业数字化专业化高效率管理</li>
+		<li>提高售后服务数字化专业化高效率管理</li>
 		<li>客户第一时间查找指导方案的便捷性</li>
-		<br />
 		<p>系统主要功能：</p>
 		<li>全局搜索查找常见关键词指导方案；</li>
 		<li>分类检索：仪表盘和娱乐屏软硬件、所有各种内饰分类；</li>
