--- a/src/pages/md-astro/markdown-222-wrapper.astro
+++ b/src/pages/md-astro/markdown-222-wrapper.astro
@@ -1,8 +1,9 @@
 ---
-import Docs from '../../../layouts/Docs.astro'
+import Docs from '../../layouts/Docs.astro'
 ---
 
 <Docs
+	title="222 指导"
 	thumbnail="/documentation/backgrounds/pascal-debrunner-LKOuYT5_dyw-unsplash.jpg"
 >
 <slot/>
